[package]
authors = ["Pavel Strakhov <ri@idzaaus.org>","Serhii Plyhun <snuk188@gmail.com>"]
build = "build.rs"
description = "Custom event-enabled QObject for usage with qt_core Rust bindings `https://github.com/rust-qt/cpp_to_rust`"
license = "MIT"
name = "qt_core_custom_events"
repository = "https://github.com/snuk182/qt_core_custom_events"
version = "0.0.2"

[build-dependencies]
[build-dependencies.qt_build_tools]
version = "~0.2"

[dependencies]
libc = "~0.2"

[dependencies.qt_core]
version = "~0.2"


