[package]
authors = ["Pavel Strakhov <ri@idzaaus.org>","Serhii Plyhun <snuk188@gmail.com>"]
build = "build.rs"
description = "Custom event-enabled QObject for usage with qt_core Rust bindings `https://github.com/rust-qt/cpp_to_rust`"
license = "MIT"
name = "qt_core_custom_events"
repository = "https://github.com/snuk182/qt_core_custom_events"
version = "0.1.0"

[dependencies]
libc = "~0.2"
qt_core = "~0.4"
cpp_core = "~0.5"

[build-dependencies]
qt_ritual_build = "~0.3"

